test/sema/negative/borrowsema/init_already_init_2.impala
struct S {
    x1: int,
    x2: int
}

fn f() -> () {
    let a: S;
    a.x1 = 9;
    a.x1 = 11;
}
